# tamanu-meta-server

./: .dockerignore  .editorconfig  .gitignore  .gitmodules  .rules  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT  Cargo.toml  Containerfile  Dockerfile  ERRORS.md  README.md  Rocket.example.toml  cliff.toml  diesel.toml  justfile  release.toml
.config/: nextest.toml
.github/: Dockerfile.native  dependabot.yml
.github/workflows/: cd-native.yml  cd.yml  ci.yml
.zed/: settings.json
crates/commons-errors/: Cargo.toml
crates/commons-errors/src/: lib.rs
crates/commons-macros/: Cargo.toml
crates/commons-macros/src/: lib.rs
crates/commons-servers/: Cargo.toml
crates/commons-servers/src/: device_auth.rs  headers.rs  lib.rs  tailscale_auth.rs
crates/commons-tests/: Cargo.toml
crates/commons-tests/src/: db.rs  lib.rs  server.rs
crates/commons-types/: Cargo.toml
crates/commons-types/src/: device.rs  geo.rs  lib.rs  macros.rs  server.rs  status.rs  version.rs
crates/commons-types/src/server/: cards.rs  kind.rs  rank.rs  ticket.rs
crates/commons-versions/: Cargo.toml
crates/commons-versions/src/: lib.rs
crates/database/: Cargo.toml
crates/database/src/: admins.rs  artifacts.rs  bestool_snippets.rs  chrome_releases.rs  devices.rs  lib.rs  migrator.rs  pg_duration.rs  schema.rs  server_kind.rs  server_rank.rs  servers.rs  sql_playground_history.rs  statuses.rs  versions.rs  views.rs
crates/database/tests/: statuses_device_fk.rs
crates/jobs/: Cargo.toml
crates/private-server/: Cargo.toml
crates/private-server/src/: app.rs  chrome_cache.rs  components.rs  fns.rs  lib.rs  main.rs  state.rs  statuses.rs
crates/private-server/src/app/: admins.rs  bestool.rs  deployment.rs  devices.rs  greeting.rs  servers.rs  sql.rs  status.rs  statuses.rs  versions.rs
crates/private-server/src/app/bestool/: snippets.rs
crates/private-server/src/app/bestool/snippets/: detail.rs
crates/private-server/src/app/devices/: detail.rs  history.rs  list.rs  search.rs  trusted.rs  untrusted.rs
crates/private-server/src/app/servers/: centrals.rs  detail.rs  edit.rs  facilities.rs  geo.rs  import.rs  list.rs
crates/private-server/src/app/versions/: detail.rs  list.rs
crates/private-server/src/components/: legend.rs  paginated_list.rs  release_summary.rs  shorties.rs  smalls.rs  sub_tabs.rs  time_ago.rs  toast.rs  version_indicator.rs
crates/private-server/src/fns/: admins.rs  bestool.rs  commons.rs  devices.rs  servers.rs  sql.rs  statuses.rs  versions.rs
crates/private-server/tests/: artifacts.rs  devices.rs  endpoints.rs  health.rs  private_statuses.rs  server_version_distance.rs  tailscale_header.rs  update_server.rs  versions.rs
crates/public-server/: Cargo.toml  release.toml
crates/public-server/src/: artifacts.rs  bestool.rs  lib.rs  main.rs  password.rs  server_versions.rs  servers.rs  state.rs  statuses.rs  timesync.rs  versions.rs
crates/public-server/templates/: artifacts.html.tera  mobile.html.tera  password.html.tera  server_versions.html.tera  versions.html.tera
crates/public-server/tests/: auth_requirements.rs  device_key_auth.rs  error_scenarios.rs  health.rs  index.rs  password.rs  server_versions.rs  servers_list.rs  static_files.rs  statuses.rs  timesync.rs  versions.rs
migrations/2024-06-25-052329_servers/: down.sql  up.sql
migrations/2024-06-26-013110_statuses/: up.sql
migrations/2024-06-26-051623_latest_statuses/: down.sql  up.sql
migrations/2024-06-27-070047_indices/: down.sql  up.sql
migrations/2024-09-04-103327_updated_ranks/: down.sql  up.sql
migrations/2024-09-05-092619_servers_view_order/: down.sql  up.sql
migrations/2025-02-19-000001_create_statuses/: up.sql
migrations/2025-02-26-075606_optimise_latest_statuses/: down.sql  up.sql
migrations/2025-03-17-222418_create_versions_table/: up.sql
migrations/2025-03-18-012421_create_artifacts_table/: down.sql  up.sql
migrations/2025-03-18-042827_create_version_updates_view/: down.sql  up.sql
migrations/2025-03-18-215716_devices/: down.sql  up.sql
migrations/2025-03-24-001017_statuses_remote_ip_and_server_type/: down.sql  up.sql
migrations/2025-03-26-223546_make_server_name_rank_nullable/: down.sql  up.sql
migrations/2025-03-28-000543_add_server_kind/: down.sql  up.sql
migrations/2025-07-23-140000_fix_is_up/: down.sql  up.sql
migrations/2025-08-14-000000_statuses_device_id/: down.sql  up.sql
migrations/2025-08-15-175043_optimize_index_types/: down.sql  up.sql
migrations/2025-08-16-050804_drop_error_field_from_statuses/: down.sql  up.sql
migrations/2025-08-16-052434_remove_remote_ip_from_statuses/: down.sql  up.sql
migrations/2025-08-16-052738_remove_latency_ms_from_statuses/: down.sql  up.sql
migrations/2025-08-16-053030_add_btree_index_on_statuses_created_at/: down.sql  up.sql
migrations/2025-08-16-072822_split_device_keys/: down.sql  up.sql
migrations/2025-08-19-072644_nil_server/: down.sql  up.sql
migrations/2025-09-28-231928_add_pending_flag_on_version/: down.sql  up.sql
migrations/2025-10-01-220626_admins_table/: up.sql
migrations/2025-10-24-025550-0000_add_parent_server_id/: down.sql  up.sql
migrations/2025-10-25-015421-0000_change_device_role_to_text/: down.sql  up.sql
migrations/2025-11-25-053943-0000_version_status_enum/: down.sql  up.sql
migrations/2025-11-25-142727-0000_add_device_id_to_versions_and_artifacts/: down.sql  up.sql
migrations/2025-12-04-125010_chrome_releases/: down.sql  (+1 more)
scripts/: test-db-setup.sh
src/: app.rs  db.rs  error.rs  helper_types.rs  launch.rs  lib.rs  main.rs  migrator.rs  ownstatus.rs  pingtask.rs  schema.rs  servers.rs  state.rs  statuses.rs  versions.rs  views.rs
static/: bestool.css
templates/: artifacts.html.tera  mobile.html.tera  password.html.tera  servers.html.tera  statuses.html.tera  versions.html.tera
tests/: auth_requirements.rs  device_key_auth.rs  error_scenarios.rs  health.rs  index.rs  password.rs  private_statuses.rs  servers_list.rs  static_files.rs  statuses.rs  statuses_device_fk.rs  tailscale_header.rs  tailscale_header_test.rs  timesync.rs  versions.rs
(+77 files in other folders)
