[package]
name = "tamanu-meta"
version = "4.1.6"
edition = "2024"
rust-version = "1.85.0"
resolver = "3"
publish = false

authors = [
	"Félix Saparelli <felix@passcod.name>",
	"BES Developers <contact@bes.au>",
]
license = "GPL-3.0-or-later"
description = "BES Tamanu coordination server"
keywords = ["bes", "tamanu"]
repository = "https://github.com/beyondessential/tamanu-meta-server"

default-run = "public_server"

[dependencies]
axum = { version = "0.8.4", features = ["json", "macros"] }
axum-client-ip = { version = "1.1.3", features = ["forwarded-header"] }
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.45", features = ["derive", "env"] }
diesel = { version = "2.2.12", features = [
	"chrono",
	"ipnet-address",
	"serde_json",
	"uuid",
	"postgres_backend",
	"i-implement-a-third-party-backend-and-opt-into-breaking-changes",
] }
diesel-async = { version = "0.6.1", features = ["mobc", "postgres"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
diesel_migrations = "2.2.0"
folktime = "0.2.1"
futures = "0.3.31"
http = "1.3.1"
ipnet = { version = "2.11.0", features = ["serde"] }
lloggs = { version = "1.1.0", features = ["miette-7"] }
miette = { version = "7.6.0", features = ["fancy"] }
mobc = "0.9.0"
node-semver = "2.2.0"
percent-encoding = "2.3.1"
problem_details = { version = "0.8.0", features = ["axum"] }
pulldown-cmark = { version = "0.13", features = ["html"] }
qrcode = { version = "0.14", features = ["svg"] }
rcgen = "0.14.3"
reqwest = { version = "0.12.23", default-features = false, features = [
	"gzip",
	"json",
	"rustls-tls",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tera = "1.20.0"
thiserror = "2.0.14"
time = "0.3.41"
timesimp = "1.0.0"
tokio = { version = "1.47.1", features = ["macros", "net", "rt-multi-thread"] }
tower-http = { version = "0.6.6", features = [
	"compression-full",
	"fs",
	"trace",
] }
tracing = "0.1.41"
url = { version = "2.5.4", features = ["serde"] }
uuid = { version = "1.18.0", features = ["serde", "v4"] }
x509-parser = "0.17.0"

[profile.release]
lto = false
codegen-units = 16
strip = "symbols"

[profile.dist]
inherits = "release"
lto = true
codegen-units = 1
strip = "symbols"

[profile.dev.build-override]
opt-level = 0
codegen-units = 1024
debug = false
debug-assertions = false
overflow-checks = false
incremental = false

[dev-dependencies]
axum-test = "17.3.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[profile.release.build-override]
opt-level = 0
codegen-units = 1024
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
