[workspace]
resolver = "3"
members = [
	"crates/commons-errors",
	"crates/commons-servers",
	"crates/commons-tests",
	"crates/commons-versions",
	"crates/database",
	"crates/jobs",
	"crates/private-server",
	"crates/public-server",
]

[workspace.dependencies]
axum = "0.8.5"
chrono = "0.4.42"
clap = "4.5.48"
diesel = "2.2.12"
diesel-async = "0.6.1"
futures = "0.3.31"
http = "1.3.1"
lloggs = "1.2.1"
miette = "7.6.0"
mobc = "0.9.0"
node-semver = "2.2.0"
problem_details = "0.8.0"
serde = "1.0.219"
tera = "1.20.0"
timesimp = "1.0.0"
tokio = "1.47.1"
tracing = "0.1.41"

[profile.release]
lto = false
codegen-units = 16
strip = "symbols"

[profile.dist]
inherits = "release"
lto = true
codegen-units = 1
strip = "symbols"

[profile.dev.build-override]
opt-level = 0
codegen-units = 1024
debug = false
debug-assertions = false
overflow-checks = false
incremental = false

[profile.release.build-override]
opt-level = 0
codegen-units = 1024
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
