[workspace]
resolver = "3"
members = [
	"crates/commons-errors",
	"crates/commons-macros",
	"crates/commons-servers",
	"crates/commons-tests",
	"crates/commons-types",
	"crates/database",
	"crates/jobs",
	"crates/private-server",
	"crates/public-server",
]

[workspace.dependencies]
axum = "0.8.4"
axum-test = "18.3.0"
clap = "4.5.47"
diesel = "2.3.3"
diesel-async = "0.7.4"
futures = "0.3.31"
http = "1.3.1"
jiff = { version = "0.2.15", features = ["serde"] }
leptos = "0.8.0"
lloggs = "1.1.0"
miette = "7.6.0"
mobc = "0.9.0"
node-semver = "2.2.0"
problem_details = "0.9.0"
pulldown-cmark = { version = "0.13.0", features = ["html"] }
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = "1.0.219"
tera = "1.20.0"
timesimp = "1.0.0"
tokio = "1.47.1"
tracing = "0.1.41"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"

[profile.wasm-release]
inherits = "release"
opt-level = "z"
panic = "abort"

[profile.dev.build-override]
opt-level = 0
codegen-units = 1024
debug = false
debug-assertions = false
overflow-checks = false
incremental = false

[profile.release.build-override]
opt-level = 0
codegen-units = 1024
debug = false
debug-assertions = false
overflow-checks = false
incremental = false

[[workspace.metadata.leptos]]
name = "private-server"
output-name = "private-server"
server-fn-mod-path = true
disable-server-fn-hash = true
site-root = "target/site"
assets-dir = "static"
site-addr = "[::1]:8081"
reload-port = 8082
env = "DEV"
bin-package = "private-server"
bin-features = ["ssr"]
lib-package = "private-server"
lib-features = ["hydrate"]
lib-profile-release = "wasm-release"
