[package]
publish = false
name = "commons-servers"
version = "5.8.2"
edition = "2024"
resolver = "3"
license = "GPL-3.0-or-later"
authors = [
	"Félix Saparelli <felix@passcod.name>",
	"BES Developers <contact@bes.au>",
]

[dependencies]
axum = { workspace = true, features = ["json", "macros"] }
axum-client-ip = { version = "1.1.3", features = ["forwarded-header"] }
axum-server-timing = "3.0.0"
commons-errors = { path = "../commons-errors" }
commons-types = { path = "../commons-types" }
database = { path = "../database" }
diesel = { workspace = true, features = [
	"ipnet-address",
	"serde_json",
	"uuid",
	"postgres_backend",
] }
diesel-async.workspace = true
http.workspace = true
node-semver.workspace = true
percent-encoding = "2.3.2"
rcgen = "0.14.3"
rfc2047-decoder = "1.0.6"
serde = { workspace = true, features = ["derive"] }
time = "0.3.43"
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread"] }
tower-http = { version = "0.6.6", features = [
	"compression-full",
	"fs",
	"trace",
] }
tracing.workspace = true
x509-parser = "0.18.0"
