[package]
publish = false
name = "commons-tests"
version = "5.3.1"
edition = "2024"
resolver = "3"
license = "GPL-3.0-or-later"
authors = [
	"Félix Saparelli <felix@passcod.name>",
	"BES Developers <contact@bes.au>",
]

[dependencies]
axum = { workspace = true, features = ["json", "macros"] }
axum-client-ip = { version = "1.1.3", features = ["forwarded-header"] }
axum-server-timing = "3.0.0"
axum-test = "17.3.0"
commons-servers = { path = "../commons-servers" }
database = { path = "../database" }
diesel.workspace = true
diesel-async.workspace = true
diesel_migrations = "2.2.0"
miette.workspace = true
percent-encoding = "2.3.2"
private-server = { path = "../private-server", features = ["ssr"] }
public-server = { path = "../public-server" }
rcgen = "0.14.3"
time = "0.3.43"
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread"] }
tracing.workspace = true
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
url = { version = "2.5.7", features = ["serde"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
x509-parser = "0.18.0"
