[package]
publish = false
name = "commons-types"
description = "Serialisable types that can be shared between client and server"
version = "5.7.4"
edition = "2024"
resolver = "3"
license = "GPL-3.0-or-later"
authors = [
	"Félix Saparelli <felix@passcod.name>",
	"BES Developers <contact@bes.au>",
]

[dependencies]
commons-errors = { path = "../commons-errors", default-features = false }
diesel = { workspace = true, optional = true }
node-semver.workspace = true
serde = { workspace = true, features = ["derive"] }
thiserror = "2.0.17"
uuid = { version = "1.19.0", features = ["serde"] }

[features]
default = ["ssr"]
ssr = [
	"dep:diesel",
	"commons-errors/ssr",
]
