[package]
publish = false
name = "commons-versions"
version = "5.3.0"
edition = "2024"
resolver = "3"
license = "GPL-3.0-or-later"
authors = [
	"Félix Saparelli <felix@passcod.name>",
	"BES Developers <contact@bes.au>",
]

[dependencies]
commons-errors = { path = "../commons-errors", default-features = false }
diesel = { workspace = true, optional = true }
node-semver.workspace = true
serde = { workspace = true, features = ["derive"] }

[features]
default = ["ssr"]
ssr = ["dep:diesel", "commons-errors/ssr"]
