[package]
publish = false
name = "database"
version = "5.3.3"
edition = "2024"
resolver = "3"
license = "GPL-3.0-or-later"
authors = [
	"Félix Saparelli <felix@passcod.name>",
	"BES Developers <contact@bes.au>",
]

[dependencies]
base64 = "0.22.1"
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive", "env"] }
commons-errors = { path = "../commons-errors" }
commons-versions = { path = "../commons-versions" }
diesel = { workspace = true, features = [
	"chrono",
	"ipnet-address",
	"serde_json",
	"uuid",
	"postgres_backend",
	"i-implement-a-third-party-backend-and-opt-into-breaking-changes",
] }
diesel-async = { workspace = true, features = ["mobc", "postgres"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
diesel_migrations = "2.2.0"
folktime = "0.2.1"
futures = "0.3.31"
hex = "0.4.3"
ipnet = { version = "2.11.0", features = ["serde"] }
lloggs = { workspace = true, features = ["miette-7"] }
miette.workspace = true
node-semver.workspace = true
reqwest = { version = "0.12.23", default-features = false, features = [
	"gzip",
	"json",
	"rustls-tls",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread"] }
tracing.workspace = true
url = { version = "2.5.7", features = ["serde"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }

[dev-dependencies]
commons-tests = { path = "../commons-tests" }
