[package]
publish = false
name = "database"
version = "5.10.0"
edition = "2024"
resolver = "3"
license = "GPL-3.0-or-later"
authors = [
	"Félix Saparelli <felix@passcod.name>",
	"BES Developers <contact@bes.au>",
]

[dependencies]
base64 = "0.22.1"
clap = { workspace = true, features = ["derive", "env"] }
commons-errors = { path = "../commons-errors" }
commons-types = { path = "../commons-types" }
diesel = { workspace = true, features = [
	"ipnet-address",
	"serde_json",
	"uuid",
	"postgres_backend",
] }
diesel-async = { workspace = true, features = ["mobc", "postgres", "migrations", "async-connection-wrapper"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
diesel_migrations = "2.3.0"
futures = "0.3.31"
hex = "0.4.3"
ipnet = { version = "2.11.0", features = ["serde"] }
jiff.workspace = true
jiff-diesel = { version = "0.1.3", features = ["postgres"] }
lloggs = { workspace = true, features = ["miette-7"] }
miette.workspace = true
node-semver.workspace = true
reqwest = { workspace = true, features = ["gzip"] }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread"] }
tracing.workspace = true
url = { version = "2.5.7", features = ["serde"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }

bestool-postgres = "1.0.3"

[dev-dependencies]
commons-tests = { path = "../commons-tests" }
