[package]
publish = false
name = "jobs"
version = "5.11.1"
edition = "2024"
resolver = "3"
license = "GPL-3.0-or-later"
authors = [
	"Félix Saparelli <felix@passcod.name>",
	"BES Developers <contact@bes.au>",
]

[dependencies]
clap = { workspace = true, features = ["derive", "env"] }
commons-errors = { path = "../commons-errors" }
database = { path = "../database" }
diesel-async = { workspace = true, features = ["mobc", "postgres"] }
hostname = "0.4.1"
jiff = { workspace = true }
lloggs = { workspace = true, features = ["miette-7"] }
miette = { workspace = true, features = ["fancy"] }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.146"
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread"] }
tracing.workspace = true
