[package]
publish = false
name = "private-server"
version = "4.2.8"
edition = "2024"
rust-version = "1.85.0"
resolver = "3"
license = "GPL-3.0-or-later"
authors = [
	"Félix Saparelli <felix@passcod.name>",
	"BES Developers <contact@bes.au>",
]

[dependencies]
axum = { workspace = true, features = ["json", "macros"] }
axum-client-ip = { version = "1.1.3", features = ["forwarded-header"] }
axum-server-timing = "3.0.0"
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive", "env"] }
database = { path = "../database" }
commons-errors = { path = "../commons-errors" }
commons-servers = { path = "../commons-servers" }
commons-versions = { path = "../commons-versions" }
folktime = "0.2.1"
lloggs = { workspace = true, features = ["miette-7"] }
miette.workspace = true
serde = { workspace = true, features = ["derive"] }
tera.workspace = true
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread"] }
tower-http = { version = "0.6.6", features = ["fs"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }

[dev-dependencies]
commons-tests = { path = "../commons-tests" }
serde_json = "1.0.145"
