[package]
publish = false
name = "private-server"
version = "5.6.2"
edition = "2024"
resolver = "3"
license = "GPL-3.0-or-later"
authors = [
	"Félix Saparelli <felix@passcod.name>",
	"BES Developers <contact@bes.au>",
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
axum = { workspace = true, optional = true, features = ["json", "macros"] }
axum-client-ip = { version = "1.1.3", optional = true, features = ["forwarded-header"] }
axum-server-timing = { version = "3.0.0", optional = true }
base64 = "0.22.1"
chrono = { workspace = true, optional = true, features = ["serde"] }
clap = { workspace = true, optional = true, features = ["derive", "env"] }
commons-errors = { path = "../commons-errors", default-features = false }
commons-servers = { path = "../commons-servers", optional = true }
commons-types = { path = "../commons-types", default-features = false }
console_error_panic_hook = { version = "0.1.0", optional = true }
database = { path = "../database", optional = true }
folktime = { version = "0.2.1", optional = true }
hex = "0.4.3"
itertools = { version = "0.14.0", optional = true }
jiff = { version = "0.2.15", optional = true }
js-sys = { version = "0.3.81", optional = true }
leptos.workspace = true
leptos_axum = { version = "0.8.0", optional = true }
leptos_meta = "0.8.0"
leptos_router = { version = "0.8.8", features = ["tracing"] }
lloggs = { workspace = true, optional = true, features = ["miette-7"] }
miette = { workspace = true, optional = true }
public-server = { path = "../public-server", optional = true, default-features = false }
reqwest = { version = "0.12", optional = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, optional = true, features = ["macros", "net", "rt-multi-thread", "signal", "time"] }
tower-http = { version = "0.6.6", optional = true, features = ["fs"] }
tracing.workspace = true
uuid = { version = "1.18.1", optional = true, features = ["serde", "v4"] }
wasm-bindgen = { version = "0.2.104", optional = true }
web-sys = { version = "0.3.81", features = ["Clipboard", "Document", "Navigator", "Window"] }

[dev-dependencies]
commons-tests = { path = "../commons-tests" }
serde_json = "1.0.145"

[features]
default = ["ssr"]
hydrate = [
    "leptos/hydrate",
    "dep:console_error_panic_hook",
    "dep:js-sys",
    "dep:wasm-bindgen",
]
ssr = [
	"dep:axum",
	"dep:axum-client-ip",
	"dep:axum-server-timing",
	"dep:chrono",
	"dep:clap",
	"dep:commons-servers",
	"dep:database",
	"dep:folktime",
	"dep:itertools",
	"dep:jiff",
	"dep:leptos_axum",
	"dep:lloggs",
	"dep:miette",
	"dep:public-server",
	"dep:reqwest",
	"dep:tokio",
	"dep:tower-http",
	"dep:uuid",
	"commons-errors/ssr",
	"commons-types/ssr",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]
