[package]
publish = false
name = "public-server"
version = "5.0.4"
edition = "2024"
resolver = "3"
license = "GPL-3.0-or-later"
authors = [
	"Félix Saparelli <felix@passcod.name>",
	"BES Developers <contact@bes.au>",
]

[dependencies]
axum = { workspace = true, features = ["json", "macros"] }
clap = { workspace = true, features = ["derive", "env"] }
commons-errors = { path = "../commons-errors" }
commons-servers = { path = "../commons-servers" }
commons-versions = { path = "../commons-versions" }
diesel = { workspace = true, features = [
	"chrono",
	"ipnet-address",
	"serde_json",
	"uuid",
	"postgres_backend",
] }
diesel-async.workspace = true
database = { path = "../database" }
futures.workspace = true
lloggs = { workspace = true, features = ["miette-7"] }
miette = { workspace = true, features = ["fancy"] }
node-semver.workspace = true
pulldown-cmark = { version = "0.13", features = ["html"] }
qrcode = { version = "0.14", features = ["svg"] }
serde = { workspace = true, features = ["derive"] }
tera.workspace = true
tokio.workspace = true
timesimp = "1.0.0"
tower-http = { version = "0.6.6", features = [
	"compression-full",
	"fs",
	"trace",
] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
serde_json = "1.0.145"
axum-client-ip = "1.1.3"

[dev-dependencies]
commons-tests = { path = "../commons-tests" }
http.workspace = true
percent-encoding = "2.3.2"
serde_json = "1.0.145"
