[package]
publish = false
name = "public-server"
version = "5.11.0"
edition = "2024"
resolver = "3"
license = "GPL-3.0-or-later"
authors = [
	"Félix Saparelli <felix@passcod.name>",
	"BES Developers <contact@bes.au>",
]

[[bin]]
name = "public-server"
required-features = ["cli"]

[dependencies]
axum = { workspace = true, features = ["json", "macros"] }
clap = { workspace = true, optional = true, features = ["derive", "env"] }
commons-errors = { path = "../commons-errors" }
commons-servers = { path = "../commons-servers" }
commons-types = { path = "../commons-types" }
diesel = { workspace = true, features = [
	"ipnet-address",
	"serde_json",
	"uuid",
	"postgres_backend",
] }
diesel-async.workspace = true
database = { path = "../database" }
futures.workspace = true
jiff.workspace = true
lloggs = { workspace = true, optional = true, features = ["miette-7"] }
miette = { workspace = true, optional = true, features = ["fancy"] }
node-semver.workspace = true
pulldown-cmark = { workspace = true, optional = true }
qrcode = { version = "0.14", optional = true, features = ["svg"] }
reqwest.workspace = true
serde = { workspace = true, features = ["derive"] }
tera = { workspace = true, optional = true }
tokio.workspace = true
timesimp = { version = "1.0.0", optional = true }
tower-http = { version = "0.6.6", optional = true, features = [
	"compression-full",
	"fs",
	"trace",
] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
serde_json = "1.0.145"
axum-client-ip = { version = "1.1.3", optional = true }
subtle = { version = "2.6", optional = true }

[dev-dependencies]
axum-test.workspace = true
commons-tests = { path = "../commons-tests" }
http.workspace = true
percent-encoding = "2.3.2"
serde_json = "1.0.145"

[features]
default = ["cli", "ui"]
cli = [
	"ui",
	"dep:axum-client-ip",
	"dep:clap",
	"dep:lloggs",
	"dep:miette",
]
ui = [
	"dep:pulldown-cmark",
	"dep:qrcode",
	"dep:subtle",
	"dep:tera",
	"dep:timesimp",
	"dep:tower-http",
]
